finish the main first section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
       </div>
   </header>
   <main>
-    <section>Section 1</section>
+    <section id="first-section">
+      <img src="./assets/images/Section_1_image.png" alt="">
+      <div>
+        <p id="big-text">Crie um espaço controlado por convite onde você se sinta em casa</p>
+        <p id="normal-text">Os servidores Discord são organizados em canais com assuntos para vocês colaborarem, compartilharem ou simplesmente falarem do dia sem entupir um chat geral.</p>
+      </div>
+    </section>
     <section>Section 2</section>
     <section>Section 3</section>
     <section>Section 4</section>
