Finish second section and its responsive

--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
         <p id="normal-text">Os servidores Discord são organizados em canais com assuntos para vocês colaborarem, compartilharem ou simplesmente falarem do dia sem entupir um chat geral.</p>
       </div>
     </section>
-    <section>Section 2</section>
+    <section id="second-section">
+      <img src="./assets/images/Section_2_image.png" alt="">
+      <div>
+        <p id="big-text">Aqui é fácil se encontrar</p>
+        <p id="normal-text">Entre no canal de voz quando estiver à toa. Amigos no mesmo servidor podem te ver e entrar imediatamente, sem nem ter que fazer a chamada.</p>
+      </div>
+    </section>
     <section>Section 3</section>
     <section>Section 4</section>
   </main>
