--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
         <p id="normal-text">Entre no canal de voz quando estiver à toa. Amigos no mesmo servidor podem te ver e entrar imediatamente, sem nem ter que fazer a chamada.</p>
       </div>
     </section>
-    <section>Section 3</section>
+    <section id="third-section">
+      <img src="./assets/images/Section_3_image.png" alt="">
+      <div>
+        <p id="big-text">Para poucos e para muitos</p>
+        <p>Organize qualquer comunidade com ferramentas de moderação e acesso personalizado a membros. Dê poderes especiais aos membros, monte canais privados e muito mais.</p>
+      </div>
+    </section>
     <section>Section 4</section>
   </main>
   <footer><Footer></Footer></footer>
