--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
         <p>Organize qualquer comunidade com ferramentas de moderação e acesso personalizado a membros. Dê poderes especiais aos membros, monte canais privados e muito mais.</p>
       </div>
     </section>
-    <section>Section 4</section>
+    <section id="fourth-section">
+      <p id="title">TECNOLOGIA DE CONEXÃO CONFIÁVEL</p>
+      <p id="text">Voz e vídeo de baixa latência, para você conversar como se estivesse na mesma sala. Dê um joinha por vídeo, veja amigos transmitirem a jogatina do dia ou junte uma galera pra desenhar na tela compartilhada.</p>
+      <img src="./assets/images/Section_4_image.png" alt="">
+    </section>
   </main>
   <footer><Footer></Footer></footer>
 </body>
