finish footer and its responsive

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
       <img src="./assets/images/Section_4_image.png" alt="">
     </section>
   </main>
-  <footer><Footer></Footer></footer>
+  <footer>
+    <img src="./assets/images/footer_image.png" alt="">
+  </footer>
 </body>
 </html>
